# slodi

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 07dd9bcf0ea4_.py  47da17d8f7dc_.py  7341ea425998_change_duration_and_prep_time_to_string.py  a1b2c3d4e5f6_add_soft_delete_to_entities.py  a7b8c9d0e1f2_fix_heidursordla_round_windows.py  ab250ef64e42_add_game_scores_leaderboard.py  abd31343eed5_.py  aeaa97f45732_.py  b263f741bc09_add_prep_time_to_content.py  b2c3d4e5f6a7_add_email_drafts_table.py  c1d2e3f4a5b6_drop_like_count_from_content.py  c3d4e5f6a7b8_.py  c4d3e2f1a0b9_change_age_to_enum_array.py  c76a42f2e49c_.py  dcea0dd713a1_increase_age_column_to_255.py  eb93eba33650_add_permissions_to_user_add_more_fields_.py  ed5103eb3c65_.py  ef96cf0f8c47_.py  f1e2d3c4b5a6_add_heidursordla_tables.py
backend/app/: main.py  settings.py
backend/scripts/: backfill_default_workspace.py  generate_heidursordla_dictionary.py  heidursordla_seed_live_rounds.sql  seed.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_email_list.py  test_events.py  test_integration.py  test_models_integration.py  test_permissions.py  test_program_filters.py  test_rate_limiter.py  test_schemas.py  test_social.py  test_soft_delete.py  test_tasks.py  test_troops.py  test_update_endpoints.py  test_users_and_workspaces.py  test_workspace_content.py
(+408 files in other folders)
